# pyproject.toml  —  build vía setuptools, layout src/
[build-system]
requires = ["setuptools>=67", "wheel", "build"]   # build es sólo para el comando `python -m build`
build-backend = "setuptools.build_meta"

[project]
name = "pyf-collection"
version = "0.1.1"                                 # ← bump de versión
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Pablo Picouto Garcia" }]
keywords = ["collection", "monads", "list", "map", "functional"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed"
]
# dependencies = ["typing-extensions>=4.8.0"]

[project.urls]
Homepage = "https://github.com/politrons/Dive-into-Python"
Issues    = "https://github.com/politrons/Dive-into-Python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyf_collection*"]
namespaces = false