[project]
name = "mcp-browser-agent-poc"
version = "0.1.0"
description = "Python proof of concept for a local Ollama agent wired to Browser MCP through configuration."
requires-python = ">=3.13.5,<3.15"
dependencies = [
    "fast-agent-mcp>=0.7.12,<0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
